# twitch-3d-printing

./: .gitignore  readme.md
chat-bot/: bot.js  package-lock.json  package.json  send-message.js  test-sqs-queue.js
lambdas/: .pylintrc  pyproject.toml
lambdas/tests/: test_get_gcode.py  test_twitch_chat_message_processor.py
lambdas/twitch_chat_message_processor/: __init__.py  chessboard_mapping_generator.py  get_gcode_from_message.py  lambda_handler.py
octopi-runner/: index.js  package-lock.json  package.json  receive-message.js  send-command-to-octopi.js
scripts/: chat-bot-runner.sh  get-twitch-access-token-auth-code.sh  get-twitch-access-token-client-credentials.sh  octopi-runner.sh
